Bug 150650 - It is not posible to set fill to None with Sidebar in a drawing
Summary: It is not posible to set fill to None with Sidebar in a drawing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Area
  Show dependency treegraph
 
Reported: 2022-08-28 18:13 UTC by jcsanz
Modified: 2023-02-16 13:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the bug (2.76 MB, video/mp4)
2022-08-28 18:17 UTC, jcsanz
Details
Description: It is not possible to set to none the fill of a drawing area via Sidebar, but it is possible to set any other opción without any problem. No problem to set the fill to none via contextua (2.03 MB, video/x-matroska)
2022-09-11 07:40 UTC, saba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jcsanz 2022-08-28 18:13:52 UTC
Description:
It is not possible to set to none the fill of a drawing area via Sidebar, but it is possible to set any other opción without any problem.

No problem to set the fill to none via contextual menu Area option or via Drawing Object Properties toolbar, only problems with Sidebar.

Steps to Reproduce:
1. Open a new Writer document (same problem in other components)
2. Select Menu > View > Toolbars > Drawing
3. Insert any figure, e.g. a rectangle
4. Show properties panel in the Sidebar
5. In the Area panel, Fill option, select None (nothing happens on drawing)
6. Select any other Fill option (the fill of the drawing changes)

Actual Results:
It is not possible to change the Fill to None via Sidebar

Expected Results:
The Fill area in the drawing should disappear


Reproducible: Always


User Profile Reset: Yes



Additional Info:
No problem to set the fill to none via contextual menu Area option or via Drawing Object Properties toolbar, only problems with Sidebar.

Tested with:

Version: 7.4.0.3 (x64) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL

This bug *did not* exist in version:

Version: 7.4.0.1 (x64) / LibreOffice Community
Build ID: 43e5fcfbbadd18fccee5a6f42ddd533e40151bcf
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL
Comment 1 jcsanz 2022-08-28 18:17:19 UTC
Created attachment 182058 [details]
Video showing the bug

A video where you can see the bug
Comment 2 saba 2022-09-11 07:40:07 UTC
Created attachment 182375 [details]
Description: It is not possible to set to none the fill of a drawing area via Sidebar, but it is possible to set any other opción without any problem.  No problem to set the fill to none via contextua

NOT REPRODUCED

Steps Followed :

1. Open a new Writer document 
2. Select Menu > View > Toolbars > Drawing
3. Insert any figure, e.g. a rectangle
4. Show properties panel in the Sidebar
5. In the Area panel, Fill option, select None 
6. In Libre office 7.4.0.0 alpha the issue has been cleared. please check my attached video file
7. The inserted figure has been dragged from the cursor place. 

Environment :

Libre Office 7.4.0.0 alpha, Linux Mint 20.3
Comment 3 Naveen 2022-09-11 08:29:31 UTC Comment hidden (off-topic)
Comment 4 jcsanz 2022-09-11 13:47:05 UTC
(In reply to saba from comment #2)
> Created attachment 182375 [details]
> Description: It is not possible to set to none the fill of a drawing area
> via Sidebar, but it is possible to set any other opción without any problem.
> No problem to set the fill to none via contextua
> 
> NOT REPRODUCED
> 
As far I can see in your video, you haven't used the Sidebar, but the bug description says *specifically* it can't be done with the Sidebar and in the description, see the additional notes, it also clarifies that it can be done in other ways, e.g. contextual menu.
Comment 5 jcsanz 2022-09-11 13:51:59 UTC
(In reply to Naveen from comment #3)
> Reproduced:
>   whenever i'm supposed to create an object using the cursor to the
> below-left corner it appears at the top-left corner. This has to be resolved
> and the object to be appeared where i exactly drag the cursor.
> 
> Steps
> 1. open libreOfficeDevDraw 
> 2. shapes => select any shape
> 3. drag cursor from below left corner
> 4. object appears in the top left corner
> 
As far I can see, your description has nothing to do with this bug. Do not mix different problems in the same bug
Comment 6 stragu 2022-09-11 16:04:10 UTC
Reproduced in:

Version: 7.4.0.3 / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 24087697d5cf78aac346d4dcea0596373e15a95c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bug not present in:

Version: 7.3.6.2 / LibreOffice Community
Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 7 raal 2022-09-14 04:35:28 UTC
bisected to fcbf9f5e30289ad8aa73538250c3bdef4747e8da is the first bad commit
commit fcbf9f5e30289ad8aa73538250c3bdef4747e8da
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Jun 25 19:42:32 2022 -0700

    source 5491a82854e3e6dd2dbb4b0012cb4bbeb4ee22e0

https://gerrit.libreoffice.org/c/core/+/136290
Comment 8 Commit Notification 2022-09-19 17:52:38 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6238758d80e170cdb586df2b34d479499574cb72

tdf#150650 Fix changing fill style to None via Sidebar

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2022-09-20 15:32:47 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/088cd9dc35b01dc5e8a7a7eedf5f52bcfc4c8001

tdf#150650 Fix changing fill style to None via Sidebar

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 stragu 2022-09-22 20:52:58 UTC
verified as fixed in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 00c5b0ca9264c5440bc70a68c425127ba5a47003
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Samuel!