tdf#150650 Fix changing fill style to None via Sidebar

Regression from 5491a82854e3e6dd2dbb4b0012cb4bbeb4ee22e0

Change-Id: I17cfb037f2064a508317090e6b66f20e253a9436
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140150
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>