svx/source/sidebar/area/AreaPropertyPanel.cxx
@@ -90,9 +90,19 @@ void AreaPropertyPanel::setFillTransparence(const XFillTransparenceItem& rItem)
 void AreaPropertyPanel::setFillUseBackground(const XFillStyleItem* pStyleItem,
                                              const XFillUseSlideBackgroundItem& rItem)
 {
-    GetBindings()->GetDispatcher()->ExecuteList(
-        SID_ATTR_FILL_USE_SLIDE_BACKGROUND, SfxCallMode::RECORD,
-        std::initializer_list<SfxPoolItem const*>{ &rItem, pStyleItem });
+    const SfxPoolItem* pItem = nullptr;
+    auto pDispatcher = GetBindings()->GetDispatcher();
+    auto state = pDispatcher->QueryState(SID_ATTR_FILL_USE_SLIDE_BACKGROUND, pItem);
+    // FillUseSlideBackground is only available in Impress
+    if (state == SfxItemState::DISABLED)
+    {
+        setFillStyle(*pStyleItem);
+    }
+    else
+    {
+        pDispatcher->ExecuteList(SID_ATTR_FILL_USE_SLIDE_BACKGROUND, SfxCallMode::RECORD,
+                                 std::initializer_list<SfxPoolItem const*>{ &rItem, pStyleItem });
+    }
 }
 
 void AreaPropertyPanel::setFillFloatTransparence(const XFillFloatTransparenceItem& rItem)
